css/main.css
/** Reset some basic elements */
body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure {
  margin: 0;
  padding: 0;
}

/** Basic styling */
body {
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 300;
  background-color: #fdfdfd;
}

/** Set `margin-bottom` to maintain vertical rhythm */
h1, h2, h3, h4, h5, h6, p, blockquote, pre, ul, ol, dl, figure, .highlight {
  margin-bottom: 15px;
}

/** Images */
img {
  max-width: 100%;
  vertical-align: middle;
}

/** Figures */
figure > img {
  display: block;
}
figcaption {
  font-size: 12px;
  color: #999999;
  padding-bottom: 12px;
}

/** Lists */
ul, ol {
  margin-left: 30px;
}
li > ul, li > ol {
  margin-bottom: 0;
}

/** Headings */
h1, h2, h3, h4, h5, h6 {
  font-weight: 400;
}

/** Links */
a {
  color: #2a7ae2;
  text-decoration: none;
}
a:visited {
  color: #1756a9;
}
a:hover {
  color: #111;
  text-decoration: underline;
}
.social-media-list a:hover {
  text-decoration: none;
}
.social-media-list a:hover .username {
  text-decoration: underline;
}

/** Blockquotes */
blockquote {
  color: #828282;
  border-left: 4px solid #e8e8e8;
  padding-left: 15px;
  font-size: 18px;
  letter-spacing: 0px;
  font-style: italic;
}
blockquote >:last-child {
  margin-bottom: 0;
}

/** Code formatting */
pre, code {
  font-family: Menlo, Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New;
  font-size: 13px;
  border: 1px solid #e8e8e8;
  border-radius: 3px;
  background-color: #efefef;
}
code {
  padding: 1px 5px;
}
pre {
  padding: 8px 12px;
  overflow-x: auto;
}
pre > code {
  border: 0;
  padding-right: 0;
  padding-left: 0;
}

/** Wrapper */
.wrapper {
  max-width: -webkit-calc(800px - (30px * 2));
  max-width: calc(800px - (30px * 2));
  margin-right: auto;
  margin-left: auto;
  padding-right: 30px;
  padding-left: 30px;
}
@media screen and (max-width:800px) {
  .wrapper {
    max-width: -webkit-calc(800px - (30px));
    max-width: calc(800px - (30px));
    padding-right: 15px;
    padding-left: 15px;
  }
}

/** Clearfix */
.wrapper:after, .footer-col-wrapper:after {
  content: "";
  display: table;
  clear: both;
}

/** Icons */
.icon > svg {
  display: inline-block;
  vertical-align: middle;
}
.icon > svg path {
  fill: #828282;
}
.social-media-list .icon {
  padding-right: 5px;
}
.social-media-list li + li {
  padding-top: 5px;
}

/** Site header */
.site-header {
  border-top: 5px solid #424242;
  border-bottom: 1px solid #e8e8e8;
  min-height: 55.95px;
  position: relative;
  background-color: #007256;
}
.site-title {
  font-size: 26px;
  font-weight: 300;
  line-height: 54px;
  letter-spacing: -1px;
  margin-bottom: 0;
  float: left;
}
.site-title, .site-title:visited {
  color: #ffffff;
}
.site-nav {
  float: right;
  line-height: 54px;
}
.site-nav .nav-trigger {
  display: none;
}
.site-nav .menu-icon {
  display: none;
}
.site-nav .page-link {
  color: #ccc;
  line-height: 1.5;
}
.site-nav .page-link:not(:last-child) {
  margin-right: 20px;
}
@media screen and (max-width:600px) {
  .site-nav {
    position: absolute;
    top: 9px;
    right: 15px;
    background-color: #fdfdfd;
    border: 1px solid #e8e8e8;
    border-radius: 5px;
    text-align: right;
  }
  .site-nav label[for="nav-trigger"] {
    display: block;
    float: right;
    width: 36px;
    height: 36px;
    z-index: 2;
    cursor: pointer;
  }
  .site-nav .menu-icon {
    display: block;
    float: right;
    width: 36px;
    height: 26px;
    line-height: 0;
    padding-top: 10px;
    text-align: center;
  }
  .site-nav .menu-icon > svg path {
    fill: #424242;
  }
  .site-nav input ~ .trigger {
    clear: both;
    display: none;
  }
  .site-nav input:checked ~ .trigger {
    display: block;
    padding-bottom: 5px;
  }
  .site-nav .page-link {
    display: block;
    padding: 5px 10px;
    margin-left: 20px;
  }
  .site-nav .page-link:not(:last-child) {
    margin-right: 0;
  }
}
.page-navigation {
  font-size: 16px;
  display: block;
  width: auto;
  overflow: hidden;
}
.page-navigation a {
  display: block;
  width: 50%;
  float: left;
  margin: 1em 0;
}
.page-navigation .prev {
  text-align: left;
  float: left;
}
.page-navigation .next {
  text-align: right;
  float: right;
}

/** Site footer */
.site-footer {
  border-top: 1px solid #e8e8e8;
  padding: 30px 0;
}
.footer-heading {
  font-size: 18px;
  margin-bottom: 15px;
}
.contact-list, .social-media-list {
  list-style: none;
  margin-left: 0;
}
.footer-col-wrapper {
  font-size: 15px;
  color: #828282;
  margin-left: -15px;
}
.footer-col {
  float: left;
  margin-bottom: 15px;
  padding-left: 15px;
}
.footer-col-1 {
  width: -webkit-calc(35% - (30px / 2));
  width: calc(35% - (30px / 2));
}
.footer-col-2 {
  width: -webkit-calc(20% - (30px / 2));
  width: calc(20% - (30px / 2));
}
.footer-col-3 {
  width: -webkit-calc(45% - (30px / 2));
  width: calc(45% - (30px / 2));
}
@media screen and (max-width:800px) {
  .footer-col-1, .footer-col-2 {
    width: -webkit-calc(50% - (30px / 2));
    width: calc(50% - (30px / 2));
  }
  .footer-col-3 {
    width: -webkit-calc(100% - (30px / 2));
    width: calc(100% - (30px / 2));
  }
}
@media screen and (max-width:600px) {
  .footer-col {
    float: none;
    width: -webkit-calc(100% - (30px / 2));
    width: calc(100% - (30px / 2));
  }
}

/** Page content */
.page-content {
  padding: 30px 0;
  /*background-color: #efefef;*/
}
.page-heading {
  font-size: 20px;
}

.post-list {
  margin-left: 0;
  list-style: none;
}
.post-list > li {
  margin-bottom: 30px;
}
.post-meta {
  font-size: 13px;
  color: #a2a2a2;
}
.post-link {
  display: block;
  font-size: 20px;
  color: #0067a7
}
.post-link:visited {
  color: #0067a7;
}
.post-link:hover {
  color: #0067a7;
}

/** Sharebar **/
.sharebar {
  min-height: 50px;
  display:-webkit-box;
  -webkit-box-pack:center;
  -webkit-box-align:center;
  background-color: #eeeeee;
  border-radius: 3px;
  
  font-size: 11pt;
  font-weight: bold;
}
.share-icon {
  width: 30px;
  height: 30px;
}
.share-icon:hover {
  transform: scale(1.1);
}


/** Posts */
.post-header {
  margin-bottom: 30px;
}
.post-title {
  font-size: 42px;
  letter-spacing: -1px;
  line-height: 1;
}
@media screen and (max-width:800px) {
  .post-title {
    font-size: 36px;
  }
}
.post-content {
  margin-bottom: 30px;
}
.post-content h2 {
  font-size: 32px;
}
@media screen and (max-width:800px) {
  .post-content h2 {
    font-size: 28px;
  }
}
.post-content h3 {
  font-size: 26px;
}
@media screen and (max-width:800px) {
  .post-content h3 {
    font-size: 22px;
  }
}
.post-content h4 {
  font-size: 20px;
}
@media screen and (max-width:800px) {
  .post-content h4 {
    font-size: 18px;
  }
}

/** Tags */
.tags {
  list-style: none;
  margin: 0;
  overflow: hidden;
}
.tags li {
  float: left;
  padding-right: 5px;
}
.tag {
  color: #0067a7;
  font-size: 11px;
  background-color: #eeeeee;
  border-radius: 3px;
  padding: 2px 5px 2px 5px;
}
.tag:visited {
  color: #0067a7;
}
.tag::before {
  content: '';
}
.tag:hover {
  background-color: #999999;
  color: white;
  text-decoration: none;
}

/** Table */
table {
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 24px;
  border-spacing: 0;
  border-bottom: 2px solid black;
  border-top: 2px solid black;
}
table th {
  padding: 3px 10px;
  background-color: white;
  border-top: none;
  border-left: none;
  border-right: none;
  border-bottom: 1px solid black;
}
table td {
  padding: 3px 10px;
  border-top: none;
  border-left: none;
  border-bottom: none;
  border-right: none;
}

/** Syntax highlighting styles */
.highlight { background: #fff; }
.highlighter-rouge .highlight { background: #efefef; }
.highlight .c { color: #998; font-style: italic; }
.highlight .err { color: #a61717; background-color: #e3d2d2; }
.highlight .k { font-weight: bold; }
.highlight .o { font-weight: bold; }
.highlight .cm { color: #998; font-style: italic; }
.highlight .cp { color: #999; font-weight: bold; }
.highlight .c1 { color: #998; font-style: italic; }
.highlight .cs { color: #999; font-weight: bold; font-style: italic; }
.highlight .gd { color: #000; background-color: #fdd; }
.highlight .gd .x { color: #000; background-color: #faa; }
.highlight .ge { font-style: italic; }
.highlight .gr { color: #a00; }
.highlight .gh { color: #999; }
.highlight .gi { color: #000; background-color: #dfd; }
.highlight .gi .x { color: #000; background-color: #afa; }
.highlight .go { color: #888; }
.highlight .gp { color: #555; }
.highlight .gs { font-weight: bold; }
.highlight .gu { color: #aaa; }
.highlight .gt { color: #a00; }
.highlight .kc { font-weight: bold; }
.highlight .kd { font-weight: bold; }
.highlight .kp { font-weight: bold; }
.highlight .kr { font-weight: bold; }
.highlight .kt { color: #458; font-weight: bold; }
.highlight .m { color: #099; }
.highlight .s { color: #d14; }
.highlight .na { color: #008080; }
.highlight .nb { color: #0086B3; }
.highlight .nc { color: #458; font-weight: bold; }
.highlight .no { color: #008080; }
.highlight .ni { color: #800080; }
.highlight .ne { color: #900; font-weight: bold; }
.highlight .nf { color: #900; font-weight: bold; }
.highlight .nn { color: #555; }
.highlight .nt { color: #000080; }
.highlight .nv { color: #008080; }
.highlight .ow { font-weight: bold; }
.highlight .w { color: #bbb; }
.highlight .mf { color: #099; }
.highlight .mh { color: #099; }
.highlight .mi { color: #099; }
.highlight .mo { color: #099; }
.highlight .sb { color: #d14; }
.highlight .sc { color: #d14; }
.highlight .sd { color: #d14; }
.highlight .s2 { color: #d14; }
.highlight .se { color: #d14; }
.highlight .sh { color: #d14; }
.highlight .si { color: #d14; }
.highlight .sx { color: #d14; }
.highlight .sr { color: #009926; }
.highlight .s1 { color: #d14; }
.highlight .ss { color: #990073; }
.highlight .bp { color: #999; }
.highlight .vc { color: #008080; }
.highlight .vg { color: #008080; }
.highlight .vi { color: #008080; }
.highlight .il { color: #099; }

